# gol-rs

./: .pre-commit-config.yaml  .travis.yml  Cargo.toml  README.MD  appveyor.yml
.github/workflows/: ci.yml  lint.yml  release.yml
benches/: grid_benchmark.rs  rendering_benchmark.rs
ci/: before_deploy.ps1  before_deploy.sh  script.sh
src/: lib.rs  main.rs
src/data/: cell.rs  grid.rs  mod.rs
src/rendering/: mod.rs
src/rendering/shaders/: instancing.glslv
