[package]
name = "gol"
version = "0.1.9"
authors = ["Lloyd <lloydmeta@gmail.com>"]
description = "Conway's game of life in OpenGL."
license = "MIT"
homepage = "https://github.com/lloydmeta/gol-rs"
documentation = "https://docs.rs/gol"
keywords = [ "OpenGL", "rendering", "gfx-rs", "game-of-life", "Conway" ]

[badges]
travis-ci = { repository = "lloydmeta/gol-rs" }

[dependencies]
rand = "0.3"
gfx = "0.16"
glutin = "0.8"
gfx_window_glutin = "0.16"
gfx_device_gl = "0.14"
clap = "2.24"
rayon = "0.8"

[[bin]]
name = "gol"
test = false
doc = false

[profile.release]
opt-level = 3
debug = false
lto = true
