[package]
name = "gol"
version = "0.1.12"
edition = "2021"
authors = ["Lloyd <lloydmeta@gmail.com>"]
description = "Conway's game of life in OpenGL."
license = "MIT"
homepage = "https://github.com/lloydmeta/gol-rs"
documentation = "https://docs.rs/gol"
keywords = [ "OpenGL", "rendering", "gfx-rs", "game-of-life", "Conway" ]

[badges]
travis-ci = { repository = "lloydmeta/gol-rs" }

[dependencies]
rand = "0.3"
gfx = "0.18"
gfx_device_gl = "0.16"
gfx_window_glutin = "0.30"
glutin = "0.20"
clap = "2.26"
rayon = "0.8"

[[bin]]
name = "gol"
test = false
doc = false

[profile.release]
opt-level = 3
debug = false
lto = true
